# zig-esp-idf-sample

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE-MIT  README.md  build.zig  build.zig.zon  flake.nix  partitions_matter.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  station_example_main.c  stubs.c  wokwi.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-nix.yml  build.yml  ci.yml
.github/workflows/wokwi/: diagram-esp32.json  diagram-esp32c3.json  diagram-esp32c6.json  diagram-esp32h2.json  diagram-esp32p4.json  diagram-esp32s2.json  diagram-esp32s3.json
cmake/: bindgen-standalone.cmake  bindings.cmake  extra-components.cmake  modify_file.cmake  patch.cmake  zig-build.cmake  zig-config.cmake  zig-download.cmake  zig-run.cmake  zig-runner.cmake  zig-translateC-standalone.cmake
docs/: build-internals.md  getting-started.md  getting_started.md  zig-xtensa.md
examples/: blink_s3SPI.zig  mqtt_client.zig
imports/: bluetooth.zig  bootloader.zig  crc.zig  dsp.zig  error.zig  event.zig  gpio.zig  heap.zig  hosted.zig  http.zig  i2c.zig  i2s.zig  idf-sys-old.zig  idf-sys.zig  idf.zig  led-strip.zig  ledc.zig  logger.zig  lwip.zig  matter.zig  mqtt.zig  nimble.zig  now.zig  nvs.zig  panic.zig  partition.zig  pcnt.zig  phy.zig  pm.zig  pthread.zig  rtos.zig  segger.zig  sleep.zig  spi.zig  timer.zig  twai.zig  uart.zig  version.zig  wdt.zig  wifi.zig  (+1 more)
include/: bt_stubs.h  matter_closure_patch.h  matter_stubs.h  pthread_stubs.h  stubs.h  wifi_stubs.h
include/freertos-compat/freertos/: portmacro.h
main/: CMakeLists.txt  Kconfig.projbuild  app.zig  build.zig  build.zig.zon  idf-sys.zig  idf_component.yml  led-strip.zig  lib.cc  lib.zig  main.c  matter_wrappers.cpp  wifi.zig
main/examples/: ble-gatt-server.zig  dsp-math.zig  dsp_math.zig  gpio-blink.zig  http-server.zig  i2c-scan.zig  matter-light.zig  smartled-rgb.zig  uart-echo.zig  wifi-station.zig
patches/: led_color_component_format_t.zig  led_strip_config_t.zig  led_strip_struct_format_layout_15.zig  porttick_period_ms.zig  wifi_ap_config_t.zig  xport_can_yield.zig
patches/led_strip/: led_strip_rmt_config_t.zig  led_strip_rmt_extra_config_20.zig
patches/wifi/: wifi_ap_config_t.zig  wifi_config_t.zig  wifi_sta_config_t.zig
